# Monografia

./: .gitignore  README.md  SUMMARY.md  abstract_en.tex  appendix1.tex  chapter1.md  chapter1.tex  chapter2.md  chapter3.tex  chapter4.tex  chapter5.tex  introduction.md  mieic-en.tex  mieic.tex  pdis-en.tex  pdis.tex  post.md  quote.tex
Latex/: Makefile  (+4 more)
eos-oracle/taikai-contracts/: CMakeLists.txt  README.md  build.sh  package-lock.json  package.json
eos-oracle/taikai-contracts/contracts/: CMakeLists.txt
eos-oracle/taikai-contracts/contracts/taikai.fund/: CMakeLists.txt  README.md  taikai.fund.abi
eos-oracle/taikai-contracts/contracts/taikai.fund/include/: challenge_stat.hpp  dividend_stat.hpp  models.hpp  taikai.fund.hpp
eos-oracle/taikai-contracts/contracts/taikai.token/: CMakeLists.txt  README.md  taikai.token.abi
eos-oracle/taikai-contracts/docker/: deploy_contract.sh  eos-stack.yml  eos.ini  eosdev_Dockerfile  init.sh  init_wallet.sh  start_eos.sh
eos-oracle/taikai-contracts/scripts/: README.md  setup_environment.sh  setup_eos_accounts.sh  tasker.js  test.sh
eos-oracle/taikai-contracts/scripts/lib/: commands.js  eosFactory.js
eos-oracle/taikai-contracts/scripts/tasks/: AllocateKai.js  BackProject.js  CloseChallenge.js  CollectAward.js  CollectLefts.js  DeployContract.js  DivBacker.js  DivMember.js  DivProject.js  FundKai.js  GetMainAccount.js  GetSupply.js  GetWalletList.js  IssueKAI.js  MintKai.js  TransferKai.js  UnlockWalletCmd.js
eos-oracle/taikai-contracts/scripts/tmp/: helder_active.key  helder_owner.key  hello_active.key  hello_owner.key  taikai.fund_active.key  taikai.fund_owner.key  taikai.token_active.key  taikai.token_owner.key  taikai.wal
eos-oracle/taikai-contracts/tests/: CMakeLists.txt  utils.cpp
(+72 files in other folders)
